# LabBot

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  DEVLOG.md  PROJECT_BRIEF.md  README.md  VERIFICATION_REPORT.md  pyproject.toml  samconfig.toml  template.yaml
.claude/agents/: labbot-devops.md  labbot-executor.md  labbot-verifier.md
.github/workflows/: ci.yml  deploy.yml
src/: requirements.txt
src/labbot/: __init__.py  citations.py  config.py  interpreter.py  logging_config.py  main.py  pii_detector.py  schemas.py
src/labbot/static/: app.js  index.html  styles.css
tests/: test_api.py  test_citations.py  test_config.py  test_e2e.py  test_interpreter.py  test_logging_config.py  test_main.py  test_pii_detector.py  test_schemas.py  test_version.py
